@@ -501,7 +501,6 @@
                 <pkgname>deepin-menu</pkgname>
                 <pkgname>deepin-movie</pkgname>
                 <pkgname>deepin-music</pkgname>
-                <pkgname>deepin-notifications</pkgname>
                 <pkgname>deepin-picker</pkgname>
                 <pkgname>deepin-qt5dxcb-plugin</pkgname>
                 <pkgname>deepin-qt5integration</pkgname>
